force-app/main/default/objects/SDO_Sales_GPT_Record_Card__c/SDO_Sales_GPT_Record_Card__c.object-meta.xml
<CustomObject>
    <label>Sales GPT Record Card</label>
    <nameField>
        <displayFormat>RC-{0000}</displayFormat>
        <label>Record Card Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales GPT Record Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>