force-app/main/default/objects/SDO_Sales_GPT_Record_Card__c/fields/Card_Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>Card_Icon_Name__c</fullName>
    <label>Card Icon Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>