force-app/main/default/objects/SDO_Sales_GPT_Record_Card__c/fields/Card_Title__c.field-meta.xml
<CustomField>
    <fullName>Card_Title__c</fullName>
    <label>Card Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>