force-app/main/default/objects/SDO_Sales_GPT_Record_Card__c/fields/Sales_GPT_Simulated_Reply__c.field-meta.xml
<CustomField>
    <fullName>Sales_GPT_Simulated_Reply__c</fullName>
    <label>Simulated Reply</label>
    <referenceTo>SDO_Sales_GPT_Simulated_Reply__c</referenceTo>
    <relationshipLabel>Sales GPT Record Cards</relationshipLabel>
    <relationshipName>Sales_GPT_Reply_Cards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>